Connect visited-places and coordinate-finder